--- a/site/styles/produtos.css
+++ b/site/styles/produtos.css
@@ -5,9 +5,21 @@
     padding-top: 5%; /* Vertical padding */
     padding-bottom: 5%; /* Vertical padding */
     background-color: white;
+    border: 2px solid whitesmoke;
 }
 
 #produtos {
     background: linear-gradient(-120deg, black 50%,whitesmoke 50%,whitesmoke 50.2%, black 50.2%, black 52.2%,whitesmoke 52.2%,whitesmoke 52.4%, black 52.4%, black 53.2%,whitesmoke 53.2%);
     background-size: cover;
 }
+
+@keyframes custom-pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(0.9); }
+    100% { transform: scale(1); }
+  }
+  
+  .fas {
+    animation: custom-pulse 3s ease-in-out;
+    animation-iteration-count: 3; /* Controla o número de vezes que a animação deve acontecer */
+  }
