Implementação dos nossos parceiros e porque trabalhar com a gente

--- a/site/styles/info.css
+++ b/site/styles/info.css
@@ -4,8 +4,8 @@
 }
 
 #text-info {
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    /* border-bottom: 3px solid black; */
 
     p {
         text-align: end !important;
