Implementação de icones e alterações de styles

--- a/site/styles/info.css
+++ b/site/styles/info.css
@@ -30,3 +30,9 @@
     color: white !important;
 }
 
+#titleOndeEstamos{
+    margin: 0 auto !important;
+    text-align: center !important;
+    
+}
+
